# StopWatch

./: . gitattributes  .clang-format  CMakeLists.txt  readme.md
include/: StopWatch.h
scripts/: base_functions.sh  check_crlf.sh
src/: StopWatch.cpp  demo.cpp
